--- a/css/basic.css
+++ b/css/basic.css
@@ -12,6 +12,12 @@ html {
   text-rendering: optimizelegibility;
 }
 
+body {
+  height: 100%;
+  height: 100vh;
+  min-height: 100vh;
+}
+
 /*    Common tag 
 --------------------------------------------------*/
 ul {
@@ -29,6 +35,20 @@ h2 {
   border-bottom: 2px solid black;
 }
 
+a {
+  color: #333;
+}
+
+nav ul li a {
+  display: block;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #333;
+  text-decoration: none;
+}
+
 /*    Layout 
 --------------------------------------------------*/
 body {
@@ -38,6 +58,8 @@ body {
 body header #logo {
   display: flex;
   flex-flow: row wrap;
+  align-items: center;
+  justify-content: flex-start;
 }
 body header #logo #icon-menu {
   flex: auto;
@@ -62,12 +84,54 @@ body main {
   flex: auto;
 }
 
+@media (min-width: 56.25em) {
+  body > header {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  body > header #logo {
+    display: block;
+  }
+  body > header #logo #icon-menu {
+    display: none;
+  }
+  body > header #nav-wrapper {
+    flex: auto;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  body > header #nav-wrapper nav {
+    display: block;
+    flex: auto;
+  }
+  body > header #nav-wrapper nav ul {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  body > header #nav-wrapper form {
+    display: block;
+  }
+
+  main {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    align-items: normal;
+  }
+}
 /*    Typography 
 --------------------------------------------------*/
 body {
   padding: 1rem;
 }
-body header #logo #icon-menu a {
+body > header #logo #icon-menu a {
   display: block;
   padding: 1rem;
   cursor: pointer;
@@ -78,6 +142,33 @@ body main {
 body footer {
   text-align: center;
   padding: 1rem;
+}
+
+@media (min-width: 56.25em) {
+  body {
+    padding: 0 calc(50% - 600px);
+  }
+  body > header {
+    padding: 2rem 1rem;
+  }
+  body > header #nav-wrapper form {
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #333;
+    text-decoration: none;
+  }
+  body > header #nav-wrapper form label {
+    text-transform: capitalize;
+    display: inline-block;
+    padding: 1rem;
+  }
+  body > header #nav-wrapper form input {
+    max-width: 15rem;
+    border: none;
+    font-size: 1.2rem;
+    border-bottom: 3px solid #333;
+    padding: 1rem;
+  }
 }
 
 /*# sourceMappingURL=basic.css.map */
