--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,12 @@ html {
   text-rendering: optimizelegibility;
 }
 
+body {
+  height: 100%;
+  height: 100vh;
+  min-height: 100vh;
+}
+
 /*    Common tag 
 --------------------------------------------------*/
 ul {
@@ -29,6 +35,20 @@ h2 {
   border-bottom: 2px solid black;
 }
 
+a {
+  color: #333;
+}
+
+nav ul li a {
+  display: block;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: #333;
+  text-decoration: none;
+}
+
 /*    Layout 
 --------------------------------------------------*/
 body {
@@ -38,6 +58,8 @@ body {
 body header #logo {
   display: flex;
   flex-flow: row wrap;
+  align-items: center;
+  justify-content: flex-start;
 }
 body header #logo #icon-menu {
   flex: auto;
@@ -62,12 +84,54 @@ body main {
   flex: auto;
 }
 
+@media (min-width: 56.25em) {
+  body > header {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  body > header #logo {
+    display: block;
+  }
+  body > header #logo #icon-menu {
+    display: none;
+  }
+  body > header #nav-wrapper {
+    flex: auto;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  body > header #nav-wrapper nav {
+    display: block;
+    flex: auto;
+  }
+  body > header #nav-wrapper nav ul {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  body > header #nav-wrapper form {
+    display: block;
+  }
+
+  main {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    align-items: normal;
+  }
+}
 /*    Typography 
 --------------------------------------------------*/
 body {
   padding: 1rem;
 }
-body header #logo #icon-menu a {
+body > header #logo #icon-menu a {
   display: block;
   padding: 1rem;
   cursor: pointer;
@@ -80,6 +144,32 @@ body footer {
   padding: 1rem;
 }
 
+@media (min-width: 56.25em) {
+  body {
+    padding: 0 calc(50% - 600px);
+  }
+  body > header {
+    padding: 2rem 1rem;
+  }
+  body > header #nav-wrapper form {
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #333;
+    text-decoration: none;
+  }
+  body > header #nav-wrapper form label {
+    text-transform: capitalize;
+    display: inline-block;
+    padding: 1rem;
+  }
+  body > header #nav-wrapper form input {
+    max-width: 15rem;
+    border: none;
+    font-size: 1.2rem;
+    border-bottom: 3px solid #333;
+    padding: 1rem;
+  }
+}
 /*    index 
 --------------------------------------------------*/
 article {
@@ -100,8 +190,55 @@ aside section figure {
   text-align: center;
 }
 aside section figure img {
-  width: 30%;
-  margin: 0 auto;
+  max-width: 100px;
 }
+
+@media (min-width: 31.25em) {
+  aside section {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  aside section figure img {
+    margin: 1rem;
+  }
+  aside section ul {
+    flex: 1 1 auto;
+    margin-left: 2rem;
+  }
+}
+@media (min-width: 56.25em) {
+  article {
+    padding: 1rem;
+  }
+  article .article-sections {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  article .article-sections section {
+    margin: 0;
+    flex: auto;
+    margin: 1rem;
+  }
+  article .article-sections section:last-of-type {
+    margin-bottom: 1rem;
+  }
+
+  aside {
+    padding: 1rem;
+  }
+  aside section {
+    display: block;
+    min-width: 300px;
+  }
+  aside section ul {
+    margin-left: 0;
+  }
+}
+/*    index-end 
+--------------------------------------------------*/
 
 /*# sourceMappingURL=index.css.map */
