--- a/css/basic.css
+++ b/css/basic.css
@@ -33,6 +33,7 @@ i.fab, i.fas {
 h2 {
   margin: 1.5rem 0 1rem;
   border-bottom: 2px solid black;
+  font-size: 1.618rem;
 }
 
 a {
@@ -55,29 +56,32 @@ body {
   display: flex;
   flex-flow: column nowrap;
 }
-body header #logo {
+body > header #logo {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
   justify-content: flex-start;
 }
-body header #logo #icon-menu {
+body > header #logo h1 {
+  font-size: 2.618rem;
+}
+body > header #logo #icon-menu {
   flex: auto;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
   justify-content: flex-end;
 }
-body header #nav-wrapper nav {
+body > header #nav-wrapper nav {
   display: none;
 }
-body header #nav-wrapper nav.active {
+body > header #nav-wrapper nav.active {
   display: block;
 }
-body header #nav-wrapper form {
+body > header #nav-wrapper form {
   display: none;
 }
-body header #nav-wrapper form.active {
+body > header #nav-wrapper form.active {
   display: block;
 }
 body main {
@@ -136,6 +140,9 @@ body > header #logo #icon-menu a {
   padding: 1rem;
   cursor: pointer;
 }
+body > header #nav-wrapper #nav-menu ul li a {
+  font-size: 1.618rem;
+}
 body main {
   flex: auto;
 }
@@ -165,7 +172,7 @@ body footer {
   body > header #nav-wrapper form input {
     max-width: 15rem;
     border: none;
-    font-size: 1.2rem;
+    font-size: 1.618rem;
     border-bottom: 3px solid #333;
     padding: 1rem;
   }
