--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -28,15 +28,12 @@
     
 
 @mixin fontSize ($level:1) {
-    @if $level == 1 {  // common size
-        font-size: 1rem;
-    } @else  if $level == 2 {  //h3
+    @if $level == 1 {          //h3
         font-size: 1.618rem;
-    } @else  if $level == 3 {  //h2
+    } @else  if $level == 2 {  //h2
         font-size: 2.618rem;
-    } @else  if $level == 4 {  //h1
+    } @else  if $level == 3 {  //h1
         font-size: 4.236rem;
-    }
-
+    }   
     
 }
