--- a/scss/index.scss
+++ b/scss/index.scss
@@ -30,6 +30,7 @@ article {
     header {
         h1{
             @include fontSize(2);
+            line-height: 1.3;
         }
 
         p {
@@ -99,9 +100,8 @@ aside {
             }
 
             ul {
-                margin-left: 2rem;
+                padding-left: 1rem;
             }
-
         }
     }
 }
@@ -137,6 +137,11 @@ aside {
            }
        }
     }
+    aside {
+        section {
+            padding: 2rem 1rem;
+        }
+    }
 }
 
 @include comment('layout 900');
@@ -156,9 +161,7 @@ aside {
     aside {
         padding: 1rem;
         section {
-            ul {
-                margin-left: 0;
-            }
+            padding: 1rem;
         }
     }
 }
