--- a/css/index.css
+++ b/css/index.css
@@ -18,296 +18,37 @@ body {
   min-height: 100vh;
 }
 
-/*    Common tag 
---------------------------------------------------*/
-ul {
-  list-style: none;
-}
-
-i.fab, i.fas {
-  display: inline-block;
-  width: 1.5rem;
-  text-align: center;
-}
-
-h2 {
-  border-bottom: 2px solid black;
-  font-size: 1.618rem;
-}
-
-a {
-  color: #333;
-}
-
-nav ul li a {
-  display: block;
-  padding: 1rem;
-  cursor: pointer;
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: #333;
-  text-decoration: none;
-}
-
 /*    Layout 
 --------------------------------------------------*/
-body {
-  display: flex;
-  flex-flow: column nowrap;
-}
-body > header #logo {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: flex-start;
-}
-body > header #logo h1 {
-  font-size: 2.618rem;
-}
-body > header #logo #icon-menu {
-  flex: auto;
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: flex-end;
-}
-body > header #nav-wrapper nav {
-  display: none;
-}
-body > header #nav-wrapper nav.active {
-  display: block;
-}
-body > header #nav-wrapper form {
-  display: none;
-}
-body > header #nav-wrapper form.active {
-  display: block;
-}
-body main {
-  flex: auto;
-}
-
-@media (min-width: 56.25em) {
-  body > header {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  body > header #logo {
-    display: block;
-  }
-  body > header #logo #icon-menu {
-    display: none;
-  }
-  body > header #nav-wrapper {
-    flex: auto;
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  body > header #nav-wrapper nav {
-    display: block;
-    flex: auto;
-  }
-  body > header #nav-wrapper nav ul {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-end;
-  }
-  body > header #nav-wrapper form {
-    display: block;
-  }
-
-  main {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: flex-start;
-    align-items: normal;
-  }
-}
 /*    Typography 
 --------------------------------------------------*/
-body {
-  padding: 1rem;
-}
-body > header #logo #icon-menu a {
-  display: block;
-  padding: 1rem;
-  cursor: pointer;
-}
-body > header #nav-wrapper #nav-menu ul li a {
-  font-size: 1.618rem;
-}
-body main {
-  flex: auto;
-}
-body footer {
-  text-align: center;
-  padding: 1rem;
-}
-
-@media (min-width: 56.25em) {
-  body {
-    padding: 0 calc(50% - 600px);
-  }
-  body > header {
-    padding: 2rem 1rem;
-  }
-  body > header #nav-wrapper form {
-    font-size: 1.2rem;
-    font-weight: 700;
-    color: #333;
-    text-decoration: none;
-  }
-  body > header #nav-wrapper form label {
-    text-transform: capitalize;
-    display: inline-block;
-    padding: 1rem;
-  }
-  body > header #nav-wrapper form input {
-    max-width: 15rem;
-    border: none;
-    font-size: 1.618rem;
-    border-bottom: 3px solid #333;
-    padding: 1rem;
-  }
-  body > header #nav-wrapper #nav-menu ul li a {
-    padding: 0;
-    padding-right: 1rem;
-  }
-}
-/*    index 
+/*    Layout 500 
+--------------------------------------------------*/
+/*    Typography 500 
+--------------------------------------------------*/
+/*    Layout 700 
+--------------------------------------------------*/
+/*    Typography 700 
+--------------------------------------------------*/
+/*    Layout 900 
+--------------------------------------------------*/
+/*    Typography 900 
 --------------------------------------------------*/
 /*    Layout 
 --------------------------------------------------*/
-aside section figure img {
-  max-width: 100px;
-}
-aside section ul li span {
-  display: inline-block;
-  width: 4rem;
-}
-
 /*    typography 
 --------------------------------------------------*/
-article {
-  padding: 1rem 0;
-}
-article header h1 {
-  font-size: 2.618rem;
-  line-height: 1.3;
-}
-article header p {
-  font-size: 1.618rem;
-  line-height: 1.3;
-}
-article .article-sections section {
-  margin-bottom: 1rem;
-}
-article .article-sections section:last-of-type {
-  margin-bottom: 0;
-}
-
-aside section {
-  box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.5);
-  padding: 1rem;
-}
-aside section figure {
-  text-align: center;
-}
-aside section figure img {
-  max-width: 100px;
-}
-aside section ul li span {
-  width: 4rem;
-  text-align: center;
-}
-aside section ul li span::after {
-  content: attr(title);
-}
-
 /*    layout 500 
 --------------------------------------------------*/
-@media (min-width: 31.25em) {
-  aside section {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  aside section ul {
-    flex: 1 1 auto;
-  }
-}
 /*    typography 500 
 --------------------------------------------------*/
-@media (min-width: 31.25em) {
-  aside section figure img {
-    margin: 1rem;
-  }
-  aside section ul {
-    padding-left: 1rem;
-  }
-}
 /*    layout 700 
 --------------------------------------------------*/
-@media (min-width: 43.75em) {
-  article {
-    flex: auto;
-  }
-  article .article-sections {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  article .article-sections section {
-    flex: auto;
-  }
-
-  aside section {
-    max-width: 500px;
-  }
-}
 /*    typography 700 
 --------------------------------------------------*/
-@media (min-width: 43.75em) {
-  article .article-sections section {
-    margin: 1rem;
-  }
-  article .article-sections section:last-of-type {
-    margin-bottom: 1rem;
-  }
-
-  aside section {
-    padding: 2rem 1rem;
-  }
-}
 /*    layout 900 
 --------------------------------------------------*/
-@media (min-width: 56.25em) {
-  aside section {
-    display: block;
-    min-width: 330px;
-  }
-}
 /*    typography 900 
 --------------------------------------------------*/
-@media (min-width: 56.25em) {
-  article {
-    padding: 1rem;
-  }
-
-  aside {
-    padding: 1rem;
-  }
-  aside section {
-    padding: 1rem;
-  }
-}
 
 /*# sourceMappingURL=index.css.map */
