--- a/scss/basic.scss
+++ b/scss/basic.scss
@@ -16,15 +16,14 @@ html {
     text-rendering: optimizelegibility;
 }
 
-body {
-    height: 100%;
-    height: 100vh;
+html, body {
     min-height: 100vh;
 }
 
 
 @include comment("Layout");
 body {
+    @include displayFlex($direction: column, $wrap: nowrap, $align-items: normal);
     >header {
         div#logo {
             display: flex;
@@ -71,6 +70,7 @@ body {
            }
         }
     }
+    main { flex: auto;}
     
 }
 
