--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -21,7 +21,7 @@
 @mixin decorateFont($variant: normal, $weight: 400, $size: 1rem, $line-height: 1.3,$color: #333) {
     font-variant: $variant; 
     font-weight: $weight;
-    font-weight: $size;
+    font-size: $size;
     line-height: $line-height;
     color: $color;
 }
