--- a/scss/basic.scss
+++ b/scss/basic.scss
@@ -76,8 +76,7 @@ body {
 
 @include comment("Typography");
 body {
-    main, >aside {
-        @extend %border;
+    >header, main {
         margin-bottom: 1rem;
     }
 
